    documents being created). Fixing #3450
 * Fixed some non-i18l phrases in Upload.
 * Less confusing error message for missing citation files. Fixes #3369.
 
2008-12-04 cjg
 * Fixed oddity that toolbox.pm defined toolkit.pm. Closes #3464

2008-12-05 tdb
 * Always test "index.html" when deciding whether to update abstract page,
    fixing #3479

2008-12-05 cjg
 * Counts on view-by-name were broken, now not. Fixed #3477.
 * Links to empty pages are now rendered as text, not links. Fixes #3476.
 * Browse by name no longer spits warnings if given part isn't there. #3478

2008-12-08 tdb
 * Use get_plugin_class to determine the Plugin class, fixes #3428
 * Fixed EPrints invalid user errors when starting indexer from apache

2008-12-12 tdb
 * Support plugin "tools" in saved searches, fixing #3462

2008-12-12 cjg
 * Fixed IE issues in javascript toggles recently introduced.

2008-12-17 tdb
 * Added maxlength of 16384 to Longtext field type (otherwise Import "cleans
    up" data to 255 chars)

2008-12-17 tdb
 * Can now use Subject input component with other fields in a workflow

2008-12-19 cjg
 * Fixed incorrect "use" line in MultilineCSV export plugin.

2009-01-12 tdb
 * Added Import module for DSpace abstract pages
 * Don't export sub-fields of compounds if set "export_as_xml=0", fixing
    #3077

2009-01-16 tdb
 * Strip all whitespace from DOIs & Pubmed IDs, fixing #3439

2009-01-23 tdb
 * Make the default allow_null() for MetaFields: FIXME properly
 * Now locate thumbnails via eprintid/docid.RELATION

2009-01-27 tdb
 * Don't encode pathing in files, fixing #3393

2009-02-02 tdb
 * Allow https access to anything under /cgi/, fixing autocomplete scripts

2009-02-05 tdb
 * Added XML library information to Status screen

2009-02-11 tdb
 * Fixed wide-char warning in Net::Cmd
 * Added support for UTF-8 email headers (addresses & subject)

2009-02-13 tdb
 * Added support for custom OAI sets, see #3271

2009-02-17 tdb
 * Added core support for cfg.d-supplied datasets
